# TestApp

./: README.md  settings.gradle
ccalljava/: CMakeLists.txt  build.gradle
ccalljava/src/androidTest/java/com/example/ccalljava/: ExampleInstrumentedTest.java
ccalljava/src/main/java/com/example/ccalljava/: JNI.java  MainActivity.java
ccalljava/src/main/jni/: CCallJava.cpp
ccalljava/src/main/jni/include/: JavaCallC.h
ccalljava/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
javacallc/: CMakeLists.txt  build.gradle  cmake  java调c说明
javacallc/src/androidTest/java/com/example/javacallc/: ExampleInstrumentedTest.java
javacallc/src/main/: AndroidManifest.xml
javacallc/src/main/cpp/: JavaCallC.cpp
javacallc/src/main/java/com/example/javacallc/: JNI.java  MainActivity.java
javacallc/src/main/res/layout/: activity_main.xml
javacallc/src/test/java/com/example/javacallc/: ExampleUnitTest.java
